--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <img class="img-instagram"src="imagenes/instagram-img-little.png" alt="">
   <a class="footer-link" href="https://www.instagram.com/qnail.s/">instagram</a>
   <img class="whatsapp-img"src="imagenes/whatsapp-img.png" alt="">
-  <a class="footer-link" href="https://qnails-netlify.com/">Whatsapp +5493512231798</a>
+  <a class="footer-link" href="https://qnails.netlify.com/">Whatsapp +5493512231798</a>
 
 
 
