--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div class="uñas">
-  <img class="hand1"src="imagenes/handpink.png" width="20%" height="20%" alt=""><img class="hand3"src="imagenes/handgreen180.png"width="20%" height="20%"alt=""><img class="hand2"src="imagenes/handviolet.png"width="20%" height="20%"alt=""><img class="hand4" src="imagenes/bottom-hand180.png" width="20%" height="20%"alt=""> height="300" alt=""><img class="hand4"src="imagenes/bottom-hand180.png" width="300" height="300"alt="">
-    <h1>Qnails</h1>
+      <img class="hand1"src="imagenes/handpink.png" width="20%" height="20%" alt=""><img class="hand3"src="imagenes/handgreen180.png"width="20%" height="20%"alt=""><img class="hand2"src="imagenes/handviolet.png"width="20%" height="20%"alt=""><img class="hand4" src="imagenes/bottom-hand180.png" width="20%" height="20%"alt="">
+   <h1>Qnails</h1>
     <h2>Servicio de belleza de manos y pies</h2>
     <h3>Manicura, podoestetica profesional, belleza de manos y pies</h3>
 
